<resources>
    <string name="app_name">Blurb</string>
    <string name="root_node_key">applications</string>
    <string name="write_node_key">writeNode</string>
    <string name="intent_request_key">intent_request_key</string>
    <string name="notification_key">notification_key</string>
    <string name="category_key">category_key</string>
    <string name="posted_by_blurb">!258fYfl10@5</string>
    <string name="default_category_to_show_key">default_category_to_show</string>
    <string name="package_key">package_key</string>
    <string name="dismiss_action_label">DISMISS</string>
    <string name="do_not_disturb_action_label">DND</string>
    <string name="action_label_share">SHARE</string>
    <string name="bottom_sheet_header_label">Notification Stats</string>
    <string name="upcoming_features_label">Upcoming Features</string>
    <string name="widget_id_key">widget_id_key</string>
    <string name="summary_text">Total notifications received </string>
    <string name="share_app_text">Hey! I just found this awesome app on play store. Check it out!</string>
    <string name="blurb_stopped">Turning off Blurb Notification</string>
    <string name="blurb_notification_access_request">Blurb requires your permission to access notifcations</string>
    <string name="pref_notification_access_granted_key">pref_notification_access_granted_key</string>
    <string name="pref_service_running_key">pref_service_running_key</string>
    <string name="pref_blurb_notification_enabled">pref_blurb_notification_enabled</string>

    <!--Content Descriptions-->
    <string name="blurb_activate_description">Activate Blurb</string>
    <string name="widget_icon_description">Turn Notifications On or Off</string>
    <string name="ongoing_ic_social_description">CATEGORY SOCIAL</string>
    <string name="ongoing_ic_news_description">CATEGORY NEWS</string>
    <string name="ongoing_ic_system_description">CATEGORY SYSTEM</string>
    <string name="ongoing_ic_rest_description">CATEGORY REST</string>
    <string name="blurb_blue_background">Blurb jagger blue background</string>
    <string name="blurb_lighter_shade_background">Blurb lighter shade of jagger blue</string>
    <string name="blurb_bell_image">Blurb notification bell</string>
    <string name="blurb_big_b">Blurb icon of big b</string>
    <string name="upcoming_features_back">Go back to blurb activate screen</string>
    <string name="stats_layout_back">Go back to blurb activate screen</string>
    
    <!--Analytics-->
    <string name="blurb_activator_id">blurb_activator</string>
</resources>
