<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/social"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_container_dimension"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_dimension"
                android:layout_height="@dimen/icon_dimension"
                android:layout_gravity="center"
                android:contentDescription="@string/ongoing_ic_social_description"
                android:src="@drawable/ic_social" />

            <TextView
                android:id="@+id/social_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_container_dimension"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_dimension"
                android:layout_height="@dimen/icon_dimension"
                android:layout_gravity="center"
                android:contentDescription="@string/ongoing_ic_news_description"
                android:src="@drawable/ic_news" />

            <TextView
                android:id="@+id/news_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/system"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_container_dimension"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_dimension"
                android:layout_height="@dimen/icon_dimension"
                android:layout_gravity="center"
                android:contentDescription="@string/ongoing_ic_system_description"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/system_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_container_dimension"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_dimension"
                android:layout_height="@dimen/icon_dimension"
                android:layout_gravity="center"
                android:contentDescription="@string/ongoing_ic_rest_description"
                android:src="@drawable/ic_more" />

            <TextView
                android:id="@+id/rest_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>