<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/social"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_social"
            android:layout_width="@dimen/icon_dimension"
            android:layout_height="@dimen/icon_dimension"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ongoing_ic_social_description"
            android:src="@drawable/ic_social" />

        <TextView
            android:id="@+id/social_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_social"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/notification_label_margin_top"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/hint_text"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/news"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon_news"
            android:layout_width="@dimen/icon_dimension"
            android:layout_height="@dimen/icon_dimension"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ongoing_ic_news_description"
            android:src="@drawable/ic_news" />

        <TextView
            android:id="@+id/news_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_news"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/notification_label_margin_top"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/hint_text"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/system"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_system"
            android:layout_width="@dimen/icon_dimension"
            android:layout_height="@dimen/icon_dimension"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ongoing_ic_system_description"
            android:src="@drawable/ic_settings" />

        <TextView
            android:id="@+id/system_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_system"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/notification_label_margin_top"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/hint_text"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/more"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_rest"
            android:layout_width="@dimen/icon_dimension"
            android:layout_height="@dimen/icon_dimension"
            android:layout_centerInParent="true"
            android:contentDescription="@string/ongoing_ic_rest_description"
            android:src="@drawable/ic_more" />

        <TextView
            android:id="@+id/rest_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/icon_rest"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/notification_label_margin_top"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/hint_text"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

</LinearLayout>